play button position

--- a/css/style.css
+++ b/css/style.css
@@ -4346,6 +4346,8 @@ input[type="button"].btn-block {
   line-height: 1;
   background-color: transparent;
   border: 2px solid transparent;
+  position: absolute;
+  right: 15px;
 }
 
 .navbar-toggler:hover,
